# research-scaffold

./: .gitignore  AGENTS.md  LICENSE  README.md  gaps.md  pyproject.toml
docs/: ARCHITECTURE.md  COOKBOOK.md
guides/: DISTILL_STYLE_GUIDE.md  EXPERIMENT_TEMPLATE.md  FIGURE_CHART_STYLE_GUIDE.md  LATEX_STYLE_GUIDE.md  RESEARCH_PROCESS.md
scaffold/: __init__.py  artifacts.py  cli.py  config.py  gates.py  hooks.py  init.py  intake.py  linear.py  observability.py  orchestrator.py  publisher.py  runner.py  state.py  tracker.py  workflow.py  workspace.py
scaffold/templates/: AGENTS.md.j2  CURRENT_STATE.md.j2  DECISIONS.md.j2  LITERATURE_REVIEW.md.j2  PREREG.md.j2  README.md.j2  RESULTS_INDEX.md.j2  SCRATCHPAD.md.j2  SESSION_TEMPLATE.md.j2  THOUGHT_LOG.md.j2  WORKFLOW.md.j2  distill.html.j2  experiment.yaml.j2  gitignore.j2
tests/: __init__.py  test_artifacts.py  test_cli.py  test_config.py  test_gates.py  test_hooks.py  test_init.py  test_intake.py  test_linear.py  test_observability.py  test_orchestrator.py  test_publisher.py  test_runner.py  test_state.py  test_tracker.py  test_workflow.py  test_workspace.py
tests/fixtures/: minimal_config.yaml
