[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaffold"
version = "0.1.0"
description = "Autonomous research harness with phase-gated execution and epistemic guardrails"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
scaffold = "scaffold.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
